--- a/aws-demo-get-data/packer/awslogs/awslogs.conf
+++ b/aws-demo-get-data/packer/awslogs/awslogs.conf
@@ -1,29 +1,26 @@
 [general]
 state_file = /var/lib/awslogs/agent-state
 
-[tos-generic-basic-instance]
+[demo-app-basic-instance]
 datetime_format = %Y-%m-%d %H:%M:%S
-file = /var/log/tos-rest-generic.log
+file = /var/log/demo-app.log
 buffer_duration = 5000
-log_stream_name = tos-generic-basic-{instance_id}
+log_stream_name = demo-app-basic-{instance_id}
 initial_position = start_of_file
-log_group_name = tos-instance
+log_group_name = demo-app-instance
 
-[tos-generic-basic-asg]
+[demo-app-basic-asg]
 datetime_format = %Y-%m-%d %H:%M:%S
-file = /var/log/tos-rest-generic.log
+file = /var/log/demo-app.log
 buffer_duration = 5000
-log_stream_name = tos-generic-basic-asg
+log_stream_name = demo-app-basic-asg
 initial_position = start_of_file
-log_group_name = tos-asg
+log_group_name = demo-app-asg
 
-[tos-generic-basic-merged]
+[demo-app-merged]
 datetime_format = %Y-%m-%d %H:%M:%S
-file = /var/log/tos-rest-generic.log
+file = /var/log/demo-app.log
 buffer_duration = 5000
-log_stream_name = tos-app-basic-merged
+log_stream_name = demo-app-merged
 initial_position = start_of_file
-log_group_name = tos-merged
-
-
-
+log_group_name = app-merged
